--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -217,6 +217,7 @@ test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue',
      Compile( 'unittest/isolated/source/test_group_database.cpp'),
      Compile( 'unittest/isolated/source/test_transform.cpp'),
      Compile( 'unittest/isolated/source/test_broker_handle.cpp'),
+     Compile( 'unittest/isolated/source/test_group_pending.cpp'),
     ],
     [
      group_archive,
