--- a/traffic/makefile.cmk
+++ b/traffic/makefile.cmk
@@ -2,6 +2,7 @@ from casual.make.directive import *
 
 
 IncludePaths([
+    '.', # proposal
 	'include',
 	'../common/include',
 	'../serviceframework/include',
@@ -96,5 +97,25 @@ LinkUnittest( 'bin/test-casual-monitor',
 #
 Install( install_lib,'$(CASUAL_HOME)/lib')
 Install( install_bin,'$(CASUAL_HOME)/bin')
+
+#
+# TODO proposal
+#
+receiver_obj = Compile( 'proposal/receiver.cpp')
+
+target = LinkExecutable( 'bin/proposal-traffic-log',
+	[
+	    Compile( 'proposal/log.cpp'),
+	    receiver_obj
+	],
+	[
+	'casual-common'] )
+
+
+
+
+
+
+
 
 
