--- a/.project
+++ b/.project
@@ -92,5 +92,10 @@
 			<type>2</type>
 			<location>/Users/hbergk/tools/json-c</location>
 		</link>
+		<link>
+			<name>test-environment</name>
+			<type>2</type>
+			<location>/Users/hbergk/test</location>
+		</link>
 	</linkedResources>
 </projectDescription>
