--- a/example/env/casual.env
+++ b/example/env/casual.env
@@ -13,6 +13,19 @@ export PYTHONPATH=$CASUAL_TOOLS_HOME
 # 
 export CASUAL_BUILD_HOME=$HOME/git/casual
 export PYTHONPATH=$PYTHONPATH:$CASUAL_BUILD_HOME/tools
+#
+
+# YAML implementation: yaml-cpp  
+#
+YAML_INCLUDE_PATH=/Users/hbergk/tools/yaml-cpp/include
+YAML_LIBRARY_PATH=/Users/hbergk/tools/yaml-cpp/newbuild
+#
+# JSON implementation: json-c 
+# 
+# Could, of course, be installed some other place... 
+#
+JSON_INCLUDE_PATH=/usr/local/include
+JSON_LIBRARY_PATH=/usr/local/lib
 
 #
 # Optional paths. space separated list of paths
@@ -21,8 +34,9 @@ export PYTHONPATH=$PYTHONPATH:$CASUAL_BUILD_HOME/tools
 # If you're building yaml, json, xml yourself and installed path is not a standard path, 
 # make sure they're present here.
 #
-export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/include "
-export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/bin "
+export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
+export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
+
 
 
 #
