--- a/transaction/makefile.cmk
+++ b/transaction/makefile.cmk
@@ -91,6 +91,17 @@ install_headers.append( 'include/transaction/resource/proxy_server.h')
 
 
 #
+# Mockup resource proxy
+#
+target = LinkExecutable( 'bin/rm-proxy-casual-mockup',
+    [ Compile( 'source/resource/template_build_resource_proxy.c')],
+    [ 'casual-mockup-rm', 'casual-resource-proxy-server'])
+
+
+install_bin.append( target)
+
+
+#
 # unittest
 #
  
@@ -109,20 +120,11 @@ LinkUnittest( 'bin/test-casual-transaction',
      'casual-configuration', 
      'sqlite3', 
      'casual-mockup',
+     'casual-mockup-rm',
      'casual-xatmi',
      'casual-mockup-unittest-environment'
      ])
 
-
-#
-# Mockup resource proxy
-#
-target = LinkExecutable( 'bin/rm-proxy-casual-mockup',
-    [ Compile( 'source/resource/template_build_resource_proxy.c')],
-    [ 'casual-mockup-rm', 'casual-resource-proxy-server'])
-
-
-install_bin.append( target)
 
 Install( install_bin,'$(CASUAL_HOME)/bin')
 Install( install_lib,'$(CASUAL_HOME)/lib')
