Some handling to be able to handle version librarys.
Not completed yet.

--- a/example/env/casual.env
+++ b/example/env/casual.env
@@ -57,9 +57,9 @@ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CASUAL_HOME/lib:$CASUAL_BUILD_HOME/conf
 #
 # CASUAL_DOMAIN_HOME - where to execute
 #
-export CASUAL_DOMAIN_HOME=$HOME/test/domain1
+export CASUAL_DOMAIN_HOME=$HOME/test/casual
 
 #
 # Defines what will be logged.
 #
-export CASUAL_LOG=error,warning,debug,information
+export CASUAL_LOG=%
