--- a/buffer/makefile.cmk
+++ b/buffer/makefile.cmk
@@ -20,7 +20,7 @@ install_lib = []
 install_include = []
 
 
-lib_buffer = LinkLibrary( 'bin/casual-buffer',
+lib_buffer = LinkLibrary( Output('bin/casual-buffer', 1,1,0),
     [
      Compile( 'source/string.cpp'),
      Compile( 'source/octet.cpp'),
@@ -45,7 +45,7 @@ casual_field_make_header = LinkExecutable( 'bin/casual_field_make_header',
     [ 
      'casual-common', 
      'casual-sf', 
-     'casual-buffer',
+      lib_buffer
     ])
 
 
