--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -1,3 +1,68 @@
+from casual.middleware.make.dsl import *
+
+
+
+IncludePaths([
+   'include',
+   '../common/include',
+   '../configuration/include',
+   '../xatmi/include',
+   '../serviceframework/include',
+   '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
+   ])
+
+
+LibraryPaths([
+    'bin',
+    '../common/bin',
+    '../configuration/bin',
+    '../xatmi/bin',
+    '../serviceframework/bin',
+    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
+    ])
+
+
+install_lib = []
+install_bin = []
+install_headers = []
+
+#
+# The gateway-manager
+#
+target = LinkExecutable( 'bin/casual-gateway-manager',
+    [
+     Compile( 'source/manager/main.cpp'),
+     Compile( 'source/manager/manager.cpp'),
+     Compile( 'source/manager/handle.cpp'),
+    ],
+    [ 
+     'casual-sf', 
+     'casual-common', 
+     'casual-configuration', 
+     'casual-xatmi',
+     ])
+
+install_bin.append( target)
+
+
+
+#
+# Unittest
+#
+
+LinkUnittest( 'bin/test-casual-gateway',
+   [
+        Compile( 'unittest/isolated/source/test_manager.cpp'),
+   ],
+   [ 'casual-sf', 'casual-common']) 
+
+
+
+
+Install( install_bin,'$(CASUAL_HOME)/bin')
+Install( install_lib,'$(CASUAL_HOME)/lib')
+Install( install_headers,'$(CASUAL_HOME)/include')
+
 
 
 
