--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -1,7 +1,7 @@
 #
 # CASUAL_TOOLS - location of tools
 #
-export CASUAL_TOOLS_HOME=$HOME/git/tools
+export CASUAL_TOOLS_HOME=$HOME/git/casual/tools
 export PATH=$PATH:$CASUAL_TOOLS_HOME/bin
 export PYTHONPATH=$CASUAL_TOOLS_HOME
 
@@ -11,21 +11,21 @@ export PYTHONPATH=$CASUAL_TOOLS_HOME
 #
 # CASUAL_BUILD_HOME - where to build
 # 
-export CASUAL_BUILD_HOME=$HOME/git/casual
+export CASUAL_BUILD_HOME=$HOME/git/casual/middleware
 export PYTHONPATH=$PYTHONPATH:$CASUAL_BUILD_HOME/tools
 #
 
 # YAML implementation: yaml-cpp  
 #
-YAML_INCLUDE_PATH=/Users/hbergk/tools/yaml-cpp/include
-YAML_LIBRARY_PATH=/Users/hbergk/tools/yaml-cpp/newbuild
+YAML_INCLUDE_PATH=/usr/local/include
+YAML_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
 #
 # JSON implementation: json-c 
 # 
 # Could, of course, be installed some other place... 
 #
 JSON_INCLUDE_PATH=/usr/local/include
-JSON_LIBRARY_PATH=/usr/local/lib
+JSON_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
 
 #
 # Optional paths. space separated list of paths
@@ -34,8 +34,8 @@ JSON_LIBRARY_PATH=/usr/local/lib
 # If you're building yaml, json, xml yourself and installed path is not a standard path, 
 # make sure they're present here.
 #
-export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
-export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
+export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/../thirdparty/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
+export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/../thirdparty/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
 
 
 
