Some reorganizing of tools

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -1,20 +1,22 @@
 #
+# Starting point
+#
+CASUAL_REPO_ROOT=$HOME/git
+
+#
 # CASUAL_TOOLS - location of tools
 #
-export CASUAL_TOOLS_HOME=$HOME/git/casual/tools
-export PATH=$PATH:$CASUAL_TOOLS_HOME/bin
-export PYTHONPATH=$CASUAL_TOOLS_HOME
-
+export CASUAL_TOOLS_HOME=$CASUAL_REPO_ROOT/casual
+export PYTHONPATH=$CASUAL_REPO_ROOT
 
 # 
 # Build 
 #
 # CASUAL_BUILD_HOME - where to build
 # 
-export CASUAL_BUILD_HOME=$HOME/git/casual/middleware
-export PYTHONPATH=$PYTHONPATH:$CASUAL_BUILD_HOME/tools
-#
+export CASUAL_BUILD_HOME=$CASUAL_REPO_ROOT/casual/middleware
 
+#
 # YAML implementation: yaml-cpp  
 #
 YAML_INCLUDE_PATH=/usr/local/include
@@ -34,8 +36,8 @@ JSON_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
 # If you're building yaml, json, xml yourself and installed path is not a standard path, 
 # make sure they're present here.
 #
-export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/../thirdparty/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
-export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/../thirdparty/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
+export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/thirdparty/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
+export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/thirdparty/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
 
 
 
@@ -47,7 +49,7 @@ export CASUAL_HOME=$HOME/usr/local
 #
 # Setting up PATH
 #
-export PATH=$PATH:$CASUAL_HOME/bin:$CASUAL_BUILD_HOME/tools/bin
+export PATH=$PATH:$CASUAL_HOME/bin:$CASUAL_BUILD_HOME/bin:$CASUAL_TOOLS_HOME/bin
 
 #
 # Temporary needed for casual-build-server to work on linux
