change PATH in the example casual.env, so we're using the stuff we're building

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -47,9 +47,10 @@ export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/thirdparty/unittest/gte
 export CASUAL_HOME=$HOME/usr/local
 
 #
-# Setting up PATH
+# Setting up PATH. Make sure repo-paths is before install-path, so that you using the stuff you're 
+# building
 #
-export PATH=$PATH:$CASUAL_HOME/bin:$CASUAL_BUILD_HOME/bin:$CASUAL_TOOLS_HOME/bin
+export PATH=$CASUAL_BUILD_HOME/tools/bin:$CASUAL_TOOLS_HOME/bin:$CASUAL_HOME/bin:$PATH
 
 #
 # Temporary needed for casual-build-server to work on linux
