refactoring: message::Type now scoped enum - memory abstractions
- change common::message:Type to a scoped enum to improve type safety
  and make it clearer
- some memory abstractions to avoid using memcpy & CO directly
- WIP gateway
- change some names from CamelCase to under_score
- some other minor improvements

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -44,6 +44,22 @@ target = LinkExecutable( 'bin/casual-gateway-manager',
 
 install_bin.append( target)
 
+#
+# The outbound ipc connector
+#
+target = LinkExecutable( 'bin/casual-gateway-outbound-ipc',
+    [
+     Compile( 'source/outbound/ipc/main.cpp'),
+     Compile( 'source/outbound/ipc/connector.cpp'),
+    ],
+    [ 
+     'casual-sf', 
+     'casual-common', 
+     'casual-configuration', 
+     'casual-xatmi',
+     ])
+
+install_bin.append( target)
 
 
 #
