--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -105,6 +105,7 @@ mockup = LinkLibrary( 'bin/casual-mockup',
      [
        Compile( 'source/mockup/ipc.cpp'),
        Compile( 'source/mockup/domain.cpp'),
+       Compile( 'source/mockup/process.cpp'),
      ],
      [ common])
 
