--- a/middleware/makefile.cmk
+++ b/middleware/makefile.cmk
@@ -11,11 +11,13 @@ Build( 'tools/makefile.cmk')
 
 with Scope():
     Parallel( True)
-        
+    
+    Build( 'domain/makefile.cmk')    
     Build( 'broker/makefile.cmk')
     Build( 'traffic/makefile.cmk')
     Build( 'administration/makefile.cmk')
     Build( 'gateway/makefile.cmk')
+    
     
     with Scope():
         Parallel( False)
